# rules_pkg

examples/prebuilt_rpmbuild/local/: BUILD  rpmbuild.sh
pkg/: BUILD  WORKSPACE  filter_directory.py  install.bzl  install.py.in  installer.bzl  installer.sh.in  mappings.bzl  providers.bzl
pkg/distro/: BUILD
pkg/experimental/: BUILD  mappings.bzl
pkg/experimental/manifest/: BUILD.bazel  manifest.bzl
pkg/experimental/tests/: mappings_test.bzl
pkg/legacy/: BUILD
pkg/new/: rpm.bzl
pkg/new/tests/rpm/: BUILD  pkg_rpm_basic_test.py
pkg/private/: BUILD  manifest.py  pkg_files.bzl
pkg/rpm/: BUILD
pkg/tests/: BUILD
pkg/tests/install/: BUILD.bazel  defs.bzl  test.py
pkg/tests/mappings/: mappings_test.bzl
pkg/tests/mappings/filter_directory/: BUILD  defs.bzl  inspect_directory.py.in  test_filter_directory.py
pkg/tests/pfg/: BUILD  mappings_test.bzl
pkg/tests/pfg/external_repo/pkg/: BUILD
