# Copyright 2020 The Bazel Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load(":manifest.bzl", "pkg_process_manifest")
load("//experimental:rpm.bzl", "pkg_rpm")

arr = pkg_process_manifest(
    name = "manifest",
    manifest = [
        # action    dest                            attributes...           source
        ["copy",    "/usr/bin/",                    "unix=0755",                "hello"],
        ["copy",    "/usr/bin/hello2",              "unix=0700",                "hello"],
        ["mkdir",   "/dir",                         "unix=0755",                "IGNORED"],
        ["mkdir",   "/dir/child",                   "unix=0755",                "IGNORED"],
        ["mkdir",   "/dir/child/other-child",       "unix=0755;section=docdir", "IGNORED"],
        ["symlink", "/dir/child/some-symlink-dest", "-",                        "/usr/bin/symlink-source"]
    ]
)

pkg_rpm(
    name = "pkg",
    version = "1.0",
    release = "1",
    license = "N/A",
    architecture = "noarch",
    data = arr,
    summary = "Test package",
    description = "Test package",
)
