# Copyright 2021 The Bazel Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_python//python:defs.bzl", "py_library", "py_test")
load("//tests/util:defs.bzl", "directory", "fake_artifact")
load("//:mappings.bzl", "pkg_files", "pkg_attributes")
load("//:install.bzl", "pkg_install")
load(":defs.bzl", "capture_pkg_install")

# Test whether `pkg_install` does the right thing... mostly.
#
# This mostly ensures that the tests install the right files to the right
# places.  It cannot reliably test modifications

# TODO(nacl): consider instead testing by invoking the tool within the test
# itself.  There is no need to capture anything inside bazel.  That way we could
# actually test fancy features
py_test(
    name = "install",
    srcs = ["test.py"],
    data = [
        #":installed_dir",
        ":why_cant_we_have_nice_things",
        ":test_installer",
    ],
    main = "test.py",
    deps = [
        "//private:manifest",
        "@rules_python//python/runfiles",
    ],
    args = ["-v"],
    # Sandboxing can make symlinks out of paths; so disable sandboxing to
    # simplify testing.
    tags = ["no-sandbox"],
)

# TODO-NOW: This shouldn't be necessary.  Why do runfiles hate me? :(
sh_library(
    name = "why_cant_we_have_nice_things",
    data = [":installed_dir"],
)

capture_pkg_install(
    name = "installed_dir",
    target = "test_installer",
)

pkg_install(
    name = "test_installer",
    srcs = [":artifacts"],
)

fake_artifact(
    name = "single_file",
)

pkg_files(
    name = "artifacts",
    srcs = ["single_file"],
    attributes = pkg_attributes(mode="0700"),
)
